Fixed Translate3d to 0 bug in Chrome, and arbitrary use of z-index, Mads!

--- a/wp/wp-content/themes/FoundationPress-child/css/trailer.css
+++ b/wp/wp-content/themes/FoundationPress-child/css/trailer.css
@@ -4,7 +4,7 @@
     position: relative;
 }
 iframe{
-    z-index: 999;
+    z-index: 2;
     position: relative;
     height: 100%;
     background: black;
